# genai-training

./: .gitignore  Makefile  README.md  app_conf.yaml  pyproject.toml  sitecustomize.py
.streamlit/: config.toml
notebooks/: langchain_runnables.ipynb  langggraph.ipynb  scratchpad.ipynb
python/: GenAI_Lab.py  config.py  fastapi_app.py  langserve_app.py  main_cli.py
python/ai_chains/: joke.py
python/ai_core/: agents_builder.py  chain_registry.py  embeddings.py  llm.py  loaders.py  prompts.py  vector_store.py
python/dummy_datasources/: app_conf.yaml  maintenance_data.py
python/pages/: 1_▫️_Runnable_Playground.py
python/utils/pydantic/: field_adder.py
python/utils/streamlit/: autogen_streamlit.py  capturing_callback_handler.py  clear_result.py  load_data.py
tests/: test_apis.py
use_case_data/informatica/: etl.xml
use_case_data/maintenance/: maintenance_procedure_1.txt  procedure_cooling_system.txt  procedure_generator.txt  procedure_turbine.txt
