[tool.poetry]
name = "genai-training"
version = "0.1.0"
description = ""
authors = ["Thierry Caminel <thierry.caminel@eviden.com>"]
readme = "README.md"
#packages = [{include = "genai-training"}]

[tool.poetry.urls]
Homepage = "https://github.com/tcaminel-pro/genai-training"
Repository = "https://github.com/tcaminel-pro/genai-training"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^2.7.0"
langchain = "^0.2.1"
langchain-core = "^0.2.3"
langgraph = "^0.0.62"
langserve = "^0.2.1"
langchain-community = {git = "https://github.com/edenai/langchain.git", rev = "feat/edenai-chat_models-tools", subdirectory = "libs/community"}
langchain-experimental = {git = "https://github.com/edenai/langchain.git", rev = "feat/edenai-chat_models-tools", subdirectory = "libs/experimental"}
langchainhub = "^0.1.17"
langchain-groq = "^0.1.4"
langchain-openai = "^0.1.3"
langchain-chroma = "^0.1.0"
litellm = "^1.37.12"
lunary = "^1.0.19"
devtools = "^0.12.2"
loguru = "^0.7.2"
chromadb = "^0.4.24"
fastapi = "^0.110.1"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
typer = "^0.9.0"
streamlit = "^1.32.1"
pyyaml = "^6.0.1"
pygraphviz = "^1.12"
grandalf = "^0.8"
sse-starlette = "^2.1.0"
tabulate = "^0.9.0"
tiktoken = "^0.7.0"


[tool.poetry.group.transformers]  # Install : poetry install --with transformers 
optional = true

[tool.poetry.group.transformers.dependencies]
sentence-transformers = "^2.6.1"
accelerate = "^0.30.1"
huggingface-hub = "^0.23.0"
#sentence-transformers = {version = "^2.6.1", optional = true }  #poetry install --extras "sentence-transformers" or poetry install --all-extras


[tool.poetry.group.demos]  # Install : poetry install --with demos 
optional = true

[tool.poetry.group.demos.dependencies]
bs4 = "^0.0.2"
lark = "^1.1.9"
tavily-python = "^0.3.3"
plotly = "^5.22.0"
yfinance = "^0.2.38"
rank-bm25 = "^0.2.2"
spacy = "^3.7.4"
matplotlib = "^3.9.0"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.4"
ruff = "^0.1.4"
ipywidgets = "^8.1.2"
diagrams = "^0.23.4"

[tool.ruff]
select = [ "E", "F", "I" ]
ignore = [ "E501" ]
builtins = ["ic", "debug"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
reportTypedDictNotRequiredAccess = false  # Avoid warnings in LangGraph

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

